--- a/project_view.html
+++ b/project_view.html
@@ -22,7 +22,7 @@
         display: inline; 
         border-radius: 2px;
     }
-    .ref-see-also { 
+        .ref-see-also { 
         background-color: #d1ecf1; 
         color: #0c5460; 
         padding: 0 4px; 
@@ -210,11 +210,14 @@ function saveData() {
     if(!d.subject) return alert("الرأس مطلوب");
     if(editIdx > -1) records[editIdx] = d; else records.push(d);
     editIdx = -1; records.sort((a,b) => cln(a.subject).localeCompare(cln(b.subject), 'ar'));
-    updateUI(); document.getElementById('biblioForm').reset();
-}
+   updateUI(); 
+    document.getElementById('biblioForm').reset();
+} // تأكد من وجود هذا القوس لإغلاق دالة saveData
+
 function editRec(i) { editIdx = i; Object.keys(records[i]).forEach(k => { if(document.getElementById(k)) document.getElementById(k).value = records[i][k]; }); }
 function switchProject(v) { localStorage.setItem('p_active', v); location.reload(); }
 function importExcel(e) { const reader = new FileReader(); reader.onload = (evt) => { records = XLSX.utils.sheet_to_json(XLSX.read(evt.target.result, {type: 'binary'}).Sheets[XLSX.read(evt.target.result, {type: 'binary'}).SheetNames[0]]); updateUI(); }; reader.readAsBinaryString(e.target.files[0]); }
+
 window.onload = updateUI;
 </script>
 <datalist id="subList"></datalist>
