--- a/project_view.html
+++ b/project_view.html
@@ -32,7 +32,16 @@
     </style>
 </head>
 <body>
+<button type="button" class="btn" style="background:#2980b9; margin: 5px;" onclick="document.getElementById('smartModal').style.display='block'">+ الإدخال الذكي</button>
 
+<div id="smartModal" style="display:none; position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); background:white; border:2px solid #2c3e50; padding:15px; z-index:9999; width:450px; box-shadow: 0 5px 20px rgba(0,0,0,0.3); border-radius:5px; color: #333;">
+    <h4 style="margin:0 0 10px 0;">الإدخال الذكي</h4>
+    <textarea id="smartInput" style="width:100%; height:80px; padding:5px; border:1px solid #ccc; font-size:11px;" placeholder="ألصق النص الببليوغرافي هنا..."></textarea>
+    <div style="margin-top:10px; text-align:left;">
+        <button type="button" class="btn" style="background:#27ae60" onclick="processSmart()">توزيع</button>
+        <button type="button" class="btn" style="background:#c0392b" onclick="document.getElementById('smartModal').style.display='none'">إلغاء</button>
+    </div>
+</div>
 <div class="fixed-header">
     <div style="color:#fff; padding:2px 15px; display:flex; justify-content:space-between;">
         <strong>الفهرس الليبي الموحد</strong>
