--- a/project_view.html
+++ b/project_view.html
@@ -34,14 +34,16 @@
 <body>
 <button type="button" class="btn" style="background:#2980b9; margin: 5px;" onclick="document.getElementById('smartModal').style.display='block'">+ الإدخال الذكي</button>
 
-<div id="smartModal" style="display:none; position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); background:white; border:2px solid #2c3e50; padding:15px; z-index:9999; width:450px; box-shadow: 0 5px 20px rgba(0,0,0,0.3); border-radius:5px; color: #333;">
-    <h4 style="margin:0 0 10px 0;">الإدخال الذكي</h4>
-    <textarea id="smartInput" style="width:100%; height:80px; padding:5px; border:1px solid #ccc; font-size:11px;" placeholder="ألصق النص الببليوغرافي هنا..."></textarea>
-    <div style="margin-top:10px; text-align:left;">
-        <button type="button" class="btn" style="background:#27ae60" onclick="processSmart()">توزيع</button>
-        <button type="button" class="btn" style="background:#c0392b" onclick="document.getElementById('smartModal').style.display='none'">إلغاء</button>
+    <div id="smartModal" style="display:none; position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); background:white; border:2px solid #2c3e50; padding:15px; z-index:9999; width:450px; box-shadow: 0 5px 20px rgba(0,0,0,0.3); border-radius:5px;">
+        <h4 style="margin:0 0 10px 0; color:#333;">الإدخال الذكي</h4>
+        <textarea id="smartInput" style="width:100%; height:80px; padding:5px; border:1px solid #ccc; font-size:11px;" placeholder="ألصق النص الببليوغرافي هنا..."></textarea>
+        <div style="margin-top:10px; text-align:left;">
+            <button type="button" class="btn" style="background:#27ae60" onclick="processSmart()">توزيع</button>
+            <button type="button" class="btn" style="background:#c0392b" onclick="document.getElementById('smartModal').style.display='none'">إلغاء</button>
+        </div>
     </div>
-</div>
+
+<button type="button" class="btn" style="background:#2980b9; margin:10px;" onclick="document.getElementById('smartModal').style.display='block'">+ فتح الإدخال الذكي</button>
 <div class="fixed-header">
     <div style="color:#fff; padding:2px 15px; display:flex; justify-content:space-between;">
         <strong>الفهرس الليبي الموحد</strong>
@@ -101,14 +103,22 @@ let editIdx = -1;
 const cln = (s) => { if (!s) return ""; return String(s).trim().replace(/^ال(?=[^ل])/, "").replace(/آ/g, "اا").replace(/[أإآ]/g, "ا").replace(/ى/g, "ي"); };
 
 // الإدخال الذكي
-function smartFill(val) {
-    if (!val) return;
-    // البحث عن أول سجل يحتوي على هذا الرأس ولديه إحالات
-    let existing = records.find(r => r.subject.trim() === val.trim() && (r.see || r.see_also));
-    if (existing) {
-        document.getElementById('see').value = existing.see || "";
-        document.getElementById('see_also').value = existing.see_also || "";
+function processSmart() {
+    let txt = document.getElementById('smartInput').value;
+    if (!txt) return;
+
+    // تحليل أولي بسيط (يمكنك تعديل القواعد حسب نمط نصوصك)
+    let parts = txt.split('/');
+    if (parts.length > 0) document.getElementById('author').value = parts[0].trim();
+    if (parts.length > 1) {
+        let subParts = parts[1].split('.');
+        document.getElementById('title').value = subParts[0].trim();
     }
+    
+    // إغلاق الصندوق وتفريغه
+    document.getElementById('smartModal').style.display = 'none';
+    document.getElementById('smartInput').value = '';
+}
 }
 
 function buildBiblioPart(r) {
