--- a/project_view.html
+++ b/project_view.html
@@ -5,17 +5,20 @@
     <title>الفهرس الليبي الموحد</title>
     <script src="https://cdn.sheetjs.com/xlsx-0.20.0/package/dist/xlsx.full.min.js"></script>
     <style>
-        body { font-family: 'Segoe UI', Tahoma, sans-serif; background: #eceef1; color: #333; margin: 0; padding: 0; font-size: 11px; overflow: hidden; }
-        .fixed-header { position: fixed; top: 0; left: 0; right: 0; background: #2c3e50; z-index: 1000; padding: 5px; }
-        .compact-grid { display: grid; grid-template-columns: repeat(7, 1fr); gap: 4px; background: #CFCFCF; padding: 8px; border-bottom: 2px solid #aaa; }
-        label { font-size: 10px; font-weight: bold; color: #444; display: block; }
-        input { width: 100%; border: 1px solid #999; padding: 2px; font-size: 11px; height: 22px; border-radius: 2px; box-sizing: border-box; }
-        .scroll-content { margin-top: 240px; height: calc(100vh - 240px); overflow-y: auto; padding: 10px; }
-        .actions { display: flex; gap: 3px; justify-content: center; background: #CFCFCF; padding-bottom: 8px; flex-wrap: wrap; }
-        .btn { padding: 4px 10px; cursor: pointer; border: none; border-radius: 3px; color: #fff; font-size: 10px; font-weight: bold; }
-        .preview-table { width: 100%; border-collapse: collapse; background: #fff; }
-        .preview-table td { border: 1px solid #ccc; padding: 5px; text-align: right; }
-        .ref-see { 
+    .scroll-content { 
+        margin-top: 185px; /* تقليل المسافة العلوية */
+        height: calc(100vh - 185px); 
+        overflow-y: auto; 
+        padding: 5px; 
+    }
+    /* تنسيق السطر الواحد للجدول */
+    .preview-table td { 
+        white-space: nowrap; 
+        overflow: hidden; 
+        text-anchor: middle;
+        text-overflow: ellipsis; 
+        max-width: 200px; /* يمنع تمدد الخانة */
+    }
         background-color: #fff3cd; 
         color: #856404; 
         padding: 0 4px; 
@@ -146,11 +149,13 @@ function updateUI() {
         subs.add(r.subject);
         let isBook = r.title && !r.see;
         // استبدل سطر العرض داخل حلقة records.forEach بهذا:
-    h += `<tr><td style="width:30px; text-align:center;">${r.title && !r.see ? s++ : '-'}</td>
-        <td><strong>${r.subject}</strong> ${r.see ? ' <span class="ref-see">انظر: ' + r.see + '</span>' : ''}
-        ${r.see_also ? '<br><span class="ref-see-also">انظر أيضاً: ' + r.see_also + '</span>' : ''}
-        ${r.title && !r.see ? `<br><strong>${r.author}</strong><br>${buildBiblioPart(r)}` : ''}</td>
-        <td style="width:50px;"><button onclick="editRec(${i})">تعديل</button></td></tr>`;
+    h += `<tr>
+        <td style="width:30px;">${isBook ? s++ : '-'}</td>
+        <td title="${r.subject}"><strong>${r.subject}</strong></td>
+        <td title="${r.author}"><em>${r.author || ''}</em></td>
+        <td style="max-width:300px;">${r.title || (r.see ? 'انظر: '+r.see : '')}</td>
+        <td style="width:50px;"><button onclick="editRec(${i})">تعديل</button></td>
+    </tr>`;
     });
     document.getElementById('tableBody').innerHTML = h;
     document.getElementById('projSelect').innerHTML = projects.map(p=>`<option ${p===currentProj?'selected':''}>${p}</option>`).join('');
