--- a/project_view.html
+++ b/project_view.html
@@ -6,18 +6,19 @@
     <script src="https://cdn.sheetjs.com/xlsx-0.20.0/package/dist/xlsx.full.min.js"></script>
     <style>
     .scroll-content { 
-        margin-top: 185px; /* تقليل المسافة العلوية */
-        height: calc(100vh - 185px); 
+        margin-top: 195px; /* تقليل المسافة العلوية */
+        height: calc(100vh - 195px); 
         overflow-y: auto; 
         padding: 5px; 
     }
     /* تنسيق السطر الواحد للجدول */
     .preview-table td { 
-        white-space: nowrap; 
+        border: 1px solid #ccc; 
+        padding: 4px; 
+        white-space: nowrap; /* إجبار النص على سطر واحد */
         overflow: hidden; 
-        text-anchor: middle;
-        text-overflow: ellipsis; 
-        max-width: 200px; /* يمنع تمدد الخانة */
+        text-overflow: ellipsis; /* إظهار نقاط عند طول النص */
+        max-width: 250px;
     }
         background-color: #fff3cd; 
         color: #856404; 
@@ -37,9 +38,9 @@
 <body>
 <button type="button" class="btn" style="background:#2980b9; margin: 5px;" onclick="document.getElementById('smartModal').style.display='block'">+ الإدخال الذكي</button>
 
-    <div id="smartModal" style="display:none; position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); background:white; border:2px solid #2c3e50; padding:15px; z-index:9999; width:450px; box-shadow: 0 5px 20px rgba(0,0,0,0.3); border-radius:5px;">
-        <h4 style="margin:0 0 10px 0; color:#333;">الإدخال الذكي</h4>
-        <textarea id="smartInput" style="width:100%; height:80px; padding:5px; border:1px solid #ccc; font-size:11px;" placeholder="ألصق النص الببليوغرافي هنا..."></textarea>
+    <div id="smartModal" style="display:none; position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); background:white; border:2px solid #2c3e50; padding:15px; z-index:9999; width:450px; box-shadow: 0 5px 20px rgba(0,0,0,0.3); border-radius:5px; color:#333;">
+        <h4 style="margin:0 0 10px 0;">الإدخال الذكي</h4>
+        <textarea id="smartInput" style="width:100%; height:80px; padding:5px; border:1px solid #ccc;" placeholder="ألصق النص الببليوغرافي هنا..."></textarea>
         <div style="margin-top:10px; text-align:left;">
             <button type="button" class="btn" style="background:#27ae60" onclick="processSmart()">توزيع</button>
             <button type="button" class="btn" style="background:#c0392b" onclick="document.getElementById('smartModal').style.display='none'">إلغاء</button>
@@ -151,10 +152,10 @@ function updateUI() {
         let isBook = r.title && !r.see;
         // استبدل سطر العرض داخل حلقة records.forEach بهذا:
     h += `<tr>
-        <td style="width:30px;">${isBook ? s++ : '-'}</td>
-        <td title="${r.subject}"><strong>${r.subject}</strong></td>
-        <td title="${r.author}"><em>${r.author || ''}</em></td>
-        <td style="max-width:300px;">${r.title || (r.see ? 'انظر: '+r.see : '')}</td>
+        <td style="width:30px; text-align:center;">${isBook ? s++ : '-'}</td>
+        <td style="width:150px;"><strong>${r.subject}</strong></td>
+        <td style="width:150px;"><em>${r.author || ''}</em></td>
+        <td>${r.title || (r.see ? '<span class="ref-see">انظر: '+r.see+'</span>' : '')}</td>
         <td style="width:50px;"><button onclick="editRec(${i})">تعديل</button></td>
     </tr>`;
     });
