--- a/project_view.html
+++ b/project_view.html
@@ -121,4 +121,93 @@ function draw() {
                 ${r.see_also ? `<span class="see-ref">انظر أيضاً: ${r.see_also}</span>` : ''}
                 ${r.author_preview ? `<b>${r.author_preview}</b>. ` : ''}
                 ${r.title ? `<em>${r.title}</em> / ` : ''}
-                ${r
+                ${r.collab ? `${r.collab}; ` : ''}
+                ${r.translator ? `ترجمة ${r.translator}. - ` : ''}
+                ${r.editor ? `تحقيق ${r.editor}. - ` : ''}
+                ${r.place ? `${r.place}: ` : ''}
+                ${r.publisher ? `${r.publisher}, ` : ''}
+                ${r.year ? `${r.year}. - ` : ''}
+                ${r.pages ? `ص ${r.pages}` : ''}
+                ${r.journal ? `<br>في: <b>${r.journal}</b>` : ''}
+            </td>
+            <td width="45"><button onclick="edit(${i})" style="font-size:9px; cursor:pointer;">تعديل</button></td>
+        </tr>`;
+    });
+    document.getElementById('out').innerHTML = h;
+    document.getElementById('pSel').innerHTML = projs.map(p=>`<option ${p===curP?'selected':''}>${p}</option>`).join('');
+}
+
+// دالة الحفظ
+function save() {
+    let d = {}; 
+    document.querySelectorAll('.in').forEach(i => d[i.id] = i.value.trim());
+    if(!d.subject) return alert("يرجى إدخال رأس الموضوع");
+    
+    recs.push(d);
+    recs.sort((a,b) => String(a.subject).localeCompare(String(b.subject), 'ar'));
+    draw(); 
+    document.getElementById('bForm').reset();
+    document.getElementById('subject').focus();
+}
+
+// دالة استخراج الكشافات مرقمة
+function idx(field, title) {
+    let list = [...new Set(recs.map(r => r[field]).filter(v => v && v.trim() !== ""))];
+    list.sort((a,b) => String(a).localeCompare(String(b), 'ar'));
+    
+    let html = `<h2 style="text-align:center; border-bottom:2px solid #2c3e50; padding-bottom:10px;">كشاف ${title}</h2>`;
+    if(list.length === 0) {
+        html += `<p style="text-align:center; color:red; margin-top:20px;">لا توجد بيانات مسجلة في هذا الكشاف.</p>`;
+    } else {
+        html += `<ul style="columns:2; list-style:none; padding:10px;">`;
+        list.forEach((item, index) => {
+            html += `<li style="border-bottom:1px solid #eee; padding:4px; font-size:12px;">
+                        <span style="color:#888;">${index + 1}.</span> ${item}
+                     </li>`;
+        });
+        html += `</ul>`;
+    }
+    document.getElementById('modalBody').innerHTML = html;
+    document.getElementById('modalOverlay').style.display = 'block';
+}
+
+// دالة المعاينة النهائية
+function showPreview() {
+    let content = `<h2 style="text-align:center">المعاينة الببليوغرافية النهائية</h2>
+                   <table class="preview-table">${document.getElementById('out').innerHTML}</table>`;
+    document.getElementById('modalBody').innerHTML = content;
+    document.getElementById('modalOverlay').style.display = 'block';
+}
+
+// دالة التعديل
+function edit(i) {
+    let r = recs[i];
+    Object.keys(r).forEach(k => { if(document.getElementById(k)) document.getElementById(k).value = r[k]; });
+    recs.splice(i, 1);
+    draw(); window.scrollTo(0,0);
+}
+
+// وظائف المشاريع
+function newP() { let n = prompt("اسم المشروع الجديد:"); if(n) { projs.push(n); curP = n; recs = []; draw(); } }
+function switchP(v) { curP = v; recs = JSON.parse(localStorage.getItem('R_' + v)) || []; draw(); }
+function delP() { if(confirm("حذف المشروع الحالي نهائياً؟")) { localStorage.removeItem('R_'+curP); projs = projs.filter(p=>p!==curP); curP=projs[0]||'مشروع_1'; draw(); location.reload(); } }
+
+// استيراد من إكسل
+function importX(e) {
+    const reader = new FileReader();
+    reader.onload = (evt) => {
+        const data = XLSX.utils.sheet_to_json(XLSX.read(evt.target.result, {type:'binary'}).Sheets[XLSX.read(evt.target.result, {type:'binary'}).SheetNames[0]]);
+        if(confirm(`تم العثور على ${data.length} سجل. إضافة؟`)) {
+            recs = [...recs, ...data];
+            recs.sort((a,b) => String(a.subject).localeCompare(String(b.subject), 'ar'));
+            draw();
+        }
+    };
+    reader.readAsBinaryString(e.target.files[0]);
+}
+
+window.onload = draw;
+</script>
+
+</body>
+</html>
