--- a/project_view.html
+++ b/project_view.html
@@ -9,7 +9,7 @@
         .fixed-header { position: fixed; top: 0; left: 0; right: 0; background: #2c3e50; z-index: 1000; border-bottom: 2px solid #000; }
         .input-table { width: 100%; background: #cfcfcf; border-spacing: 2px; padding: 2px; table-layout: fixed; }
         label { font-size: 9px; font-weight: bold; color: #333; display: block; text-align: center; }
-        input { width: 100%; height: 18px; font-size: 10px; border: 1px solid #999; text-align: right; background: #fff; }
+        input, select { width: 100%; height: 18px; font-size: 10px; border: 1px solid #999; text-align: right; background: #fff; }
         .w-sm { width: 60px !important; }
         .actions { background: #cfcfcf; text-align: center; padding: 4px; display: flex; justify-content: center; gap: 4px; border-bottom: 2px solid #2c3e50; }
         .btn { padding: 3px 8px; cursor: pointer; border: none; border-radius: 3px; color: #fff; font-size: 10px; font-weight: bold; }
@@ -17,8 +17,8 @@
         .admin-table { border-collapse: collapse; background: #fff; font-size: 11px; width: 100%; }
         .admin-table th { position: sticky; top: 0; background: #34495e; color: white; z-index: 100; padding: 5px; border: 1px solid #2c3e50; }
         .admin-table td { border: 1px solid #ccc; padding: 5px; text-align: right; vertical-align: top; }
-        .btn-edit-row { background: #2980b9 !important; margin-left: 5px; } /* لون أزرق للتعديل */
-        .btn-del-row { background: #c0392b !important; } /* لون أحمر للحذف */
+        .btn-edit-row { background: #2980b9 !important; margin-left: 5px; } 
+        .btn-del-row { background: #c0392b !important; }
         #modalOverlay { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); z-index:2000; }
         .modal-content { background:white; width:90%; margin:1% auto; padding:25px; height: 90vh; overflow-y: auto; position: relative; }
         .close-fixed { position: fixed; top: 20px; left: 60px; background: #c0392b; color: white; border: none; padding: 8px 20px; cursor: pointer; font-weight: bold; z-index: 3000; border-radius: 5px; }
@@ -34,17 +34,18 @@
             <button onclick="exportX()" class="btn" style="background:#2980b9">💾 تصدير</button>
             <input type="file" id="xlIn" style="display:none" onchange="importX(event)">
             <button onclick="newP()" class="btn" style="background:#27ae60">+ مشروع</button>
-            <select id="pSel" onchange="switchP(this.value)" style="font-size:10px;"></select>
+            <select id="pSel" onchange="switchP(this.value)" style="width:auto; height:22px;"></select>
             <button onclick="delP()" class="btn" style="background:#c0392b">حذف المشروع</button>
         </div>
     </div>
 
     <form id="bForm">
+        <datalist id="subjectsList"></datalist>
         <table class="input-table" id="inputGrid">
             <tr>
-                <td><label>رأس الموضوع</label><input type="text" id="subject" class="in"></td>
-                <td><label>إحالة انظر</label><input type="text" id="see" class="in"></td>
-                <td><label>إحالة انظر أيضاً</label><input type="text" id="see_also" class="in"></td>
+                <td><label>رأس الموضوع</label><input type="text" id="subject" class="in" list="subjectsList"></td>
+                <td><label>إحالة انظر</label><input type="text" id="see" class="in" list="subjectsList"></td>
+                <td><label>إحالة انظر أيضاً</label><input type="text" id="see_also" class="in" list="subjectsList"></td>
                 <td><label>المؤلف (مقلوب)</label><input type="text" id="author" class="in"></td>
                 <td><label>المؤلف (للمعاينة)</label><input type="text" id="author_preview" class="in"></td>
                 <td><label>العنوان</label><input type="text" id="title" class="in"></td>
@@ -74,7 +75,7 @@
         </table>
         <div class="actions">
             <button type="button" id="saveBtn" class="btn" style="background:#27ae60" onclick="save()">حفظ السجل</button>
-            <button type="button" class="btn" style="background:#e67e22" onclick="openSmartInput()">إدخال ذكي</button>
+            <button type="button" class="btn" style="background:#e67e22" onclick="quickDistribute()">توزيع ذكي (من خانة الرأس)</button>
             <button type="button" class="btn" style="background:#8e44ad" onclick="openBiblioWindow()">معاينة القائمة (نافذة جديدة)</button>
             <button type="button" class="btn" style="background:#2c3e50" onclick="idx('author', 'المؤلفين')">كشاف المؤلفين</button>
             <button type="button" class="btn" style="background:#d35400" onclick="idx('title', 'العناوين')">كشاف العناوين</button>
@@ -110,6 +111,11 @@ function draw() {
     localStorage.setItem('R_' + curP, JSON.stringify(recs));
     localStorage.setItem('L_P', JSON.stringify(projs));
     localStorage.setItem('L_A', curP);
+    
+    // تحديث القائمة المنسدلة للرؤوس
+    let subs = [...new Set(recs.map(r => r.subject))];
+    document.getElementById('subjectsList').innerHTML = subs.map(s => `<option value="${s}">`).join('');
+
     let hBody = '', entryCounter = 1;
     recs.forEach((r, i) => {
         let isRef = (r.see || r.see_also) && !r.title;
@@ -130,6 +136,15 @@ function save() {
     draw(); document.getElementById('bForm').reset(); document.getElementById('subject').focus();
 }
 
+function quickDistribute() {
+    let raw = document.getElementById('subject').value;
+    if(!raw.includes('؛')) return alert("انسخ النص المفصول بـ (؛) في خانة رأس الموضوع أولاً");
+    let pts = raw.split('؛').map(p => p.trim());
+    const fields = ['author', 'author_preview', 'title', 'collab', 'translator', 'place', 'publisher', 'year', 'pages'];
+    pts.forEach((v, i) => { if(fields[i]) document.getElementById(fields[i]).value = v; });
+    document.getElementById('subject').value = ""; // تفريغ الخانة للاستخدام الصحيح
+}
+
 function edit(i) {
     editIndex = i; let r = recs[i];
     document.querySelectorAll('.in').forEach(inp => inp.value = r[inp.id] || '');
@@ -140,14 +155,13 @@ function deleteRec(i) { if(confirm("حذف السجل؟")) { recs.splice(i, 1); 
 
 function openBiblioWindow() {
     const win = window.open('', '_blank');
-    let content = `<html dir="rtl"><head><title>القائمة الببليوغرافية</title><style>body { font-family: 'Times New Roman', serif; padding: 40px; line-height: 1.6; font-size: 12pt; } .preview-subject { background: #d1d1d1; text-align: center; font-weight: bold; padding: 5px; margin: 20px 0 10px 0; font-size: 14pt; border: 1px solid #999; } .entry-container { margin-bottom: 15px; border-bottom: 1px dashed #ccc; padding-bottom: 8px; }</style></head><body><h1 style="text-align:center">القائمة الببليوغرافية</h1>`;
+    let content = `<html dir="rtl"><head><title>القائمة الببليوغرافية</title><style>body { font-family: 'Times New Roman', serif; padding: 40px; line-height: 1.6; font-size: 13pt; } .preview-subject { background: #d1d1d1; text-align: center; font-weight: bold; padding: 5px; margin: 20px 0 10px 0; font-size: 15pt; border: 1px solid #999; } .entry-container { margin-bottom: 15px; border-bottom: 1px dashed #ccc; padding-bottom: 8px; }</style></head><body><h1 style="text-align:center">القائمة الببليوغرافية</h1>`;
     let lastSub = '';
     recs.forEach((r) => {
         if (r.subject !== lastSub) { content += `<div class="preview-subject">${r.subject}</div>`; lastSub = r.subject; }
         if (r.title) {
             let titleSep = (r.translator && !r.collab) ? " / " : ". - ";
             let resp = (r.author_preview || '') + (r.collab ? '، ' + r.collab : '') + (r.translator ? (r.collab ? '؛ ترجمة ' : 'ترجمة ') + r.translator : '');
-            // تعديل المجلة لتظهر بيانات العدد مسبوقة بـ . ـــ
             let journalData = r.journal ? (r.journal + (r.issue ? ' . ـــ ' + r.issue : '')) : '';
             let pgStr = r.pages ? (r.journal ? 'ص ' + r.pages : r.pages + ' ص') : '';
             let endPart = (pgStr ? ". - " + pgStr : "") + (r.series ? " . ـــ " + r.series : "") + (r.orig_title ? " . ـــ العنوان الأصلي: " + r.orig_title : "") + (r.material_type ? " . ـــ " + r.material_type : "") + ".";
@@ -161,8 +175,7 @@ function importX(e) {
     let f = e.target.files[0]; let rd = new FileReader();
     rd.onload = function(e) {
         let d = new Uint8Array(e.target.result); let wb = XLSX.read(d, {type:'array'});
-        let json = XLSX.utils.sheet_to_json(wb.Sheets[wb.SheetNames[0]]);
-        recs = json; draw(); alert("تم الاستيراد بنجاح");
+        recs = XLSX.utils.sheet_to_json(wb.Sheets[wb.SheetNames[0]]); draw(); alert("تم الاستيراد بنجاح");
     }; rd.readAsArrayBuffer(f);
 }
 
@@ -176,8 +189,6 @@ function closeM() { document.getElementById('modalOverlay').style.display='none'
 function newP() { let n = prompt("اسم المشروع:"); if(n) { projs.push(n); curP=n; recs=[]; draw(); } }
 function switchP(v) { curP=v; recs=JSON.parse(localStorage.getItem('R_'+v))||[]; draw(); }
 function delP() { if(confirm("حذف المشروع؟")) { localStorage.removeItem('R_'+curP); projs=projs.filter(p=>p!==curP); curP=projs[0]||'مشروع_1'; draw(); } }
-function openSmartInput() { let h = `<h3>إدخال ذكي</h3><textarea id="smartArea" style="width:100%; height:120px; text-align:right;"></textarea><br><button class="btn" style="background:#27ae60" onclick="processSmart()">توزيع</button>`; document.getElementById('modalBody').innerHTML = h; document.getElementById('modalOverlay').style.display = 'block'; }
-function processSmart() { let pts = document.getElementById('smartArea').value.split('؛').map(p => p.trim()); const m = ['author', 'author_preview', 'title', 'collab', 'translator', 'place', 'publisher', 'year', 'pages']; pts.forEach((v, i) => { if(m[i]) document.getElementById(m[i]).value = v; }); closeM(); }
 window.onload = draw;
 </script>
 </body>
