--- a/project_view.html
+++ b/project_view.html
@@ -43,7 +43,7 @@
         <datalist id="subjectsList"></datalist>
         <table class="input-table" id="inputGrid">
             <tr>
-                <td><label>رأس الموضوع</label><input type="text" id="subject" class="in" list="subjectsList"></td>
+                <td><label>رأس الموضوع</label><input type="text" id="subject" class="in" list="subjectsList" oninput="flexibleDistribute(this)"></td>
                 <td><label>إحالة انظر</label><input type="text" id="see" class="in" list="subjectsList"></td>
                 <td><label>إحالة انظر أيضاً</label><input type="text" id="see_also" class="in" list="subjectsList"></td>
                 <td><label>المؤلف (مقلوب)</label><input type="text" id="author" class="in"></td>
@@ -75,12 +75,11 @@
         </table>
         <div class="actions">
             <button type="button" id="saveBtn" class="btn" style="background:#27ae60" onclick="save()">حفظ السجل</button>
-            <button type="button" class="btn" style="background:#e67e22" onclick="quickDistribute()">توزيع ذكي (من خانة الرأس)</button>
             <button type="button" class="btn" style="background:#8e44ad" onclick="openBiblioWindow()">معاينة القائمة (نافذة جديدة)</button>
             <button type="button" class="btn" style="background:#2c3e50" onclick="idx('author', 'المؤلفين')">كشاف المؤلفين</button>
             <button type="button" class="btn" style="background:#d35400" onclick="idx('title', 'العناوين')">كشاف العناوين</button>
             <button type="button" class="btn" style="background:#c0392b" onclick="idx('trans_idx', 'المترجمين')">كشاف المترجمين</button>
-            <button type="button" class="btn" style="background:#16a085" onclick="idx('journal', 'المجلات')">قائمة المجلات</button>
+            <button type="button" class="btn" style="background:#16a085" onclick="journalIdx()">قائمة المجلات</button>
             <button type="button" class="btn" style="background:#2980b9" onclick="idx('subject', 'الموضوعات')">رؤوس الموضوعات</button>
         </div>
     </form>
@@ -111,11 +110,8 @@ function draw() {
     localStorage.setItem('R_' + curP, JSON.stringify(recs));
     localStorage.setItem('L_P', JSON.stringify(projs));
     localStorage.setItem('L_A', curP);
-    
-    // تحديث القائمة المنسدلة للرؤوس
     let subs = [...new Set(recs.map(r => r.subject))];
     document.getElementById('subjectsList').innerHTML = subs.map(s => `<option value="${s}">`).join('');
-
     let hBody = '', entryCounter = 1;
     recs.forEach((r, i) => {
         let isRef = (r.see || r.see_also) && !r.title;
@@ -136,13 +132,20 @@ function save() {
     draw(); document.getElementById('bForm').reset(); document.getElementById('subject').focus();
 }
 
-function quickDistribute() {
-    let raw = document.getElementById('subject').value;
-    if(!raw.includes('؛')) return alert("انسخ النص المفصول بـ (؛) في خانة رأس الموضوع أولاً");
-    let pts = raw.split('؛').map(p => p.trim());
-    const fields = ['author', 'author_preview', 'title', 'collab', 'translator', 'place', 'publisher', 'year', 'pages'];
-    pts.forEach((v, i) => { if(fields[i]) document.getElementById(fields[i]).value = v; });
-    document.getElementById('subject').value = ""; // تفريغ الخانة للاستخدام الصحيح
+// الحل المطور: توزيع مرن باستخدام أي علامة ترقيم غير الحروف
+function flexibleDistribute(el) {
+    const val = el.value;
+    // إذا وجد علامة ترقيم متبوعة بمسافة أو علامة مكررة (؛ أو . أو - أو |)
+    const regex = /[؛\.\|\-,]\s|؛/g;
+    if (regex.test(val)) {
+        let pts = val.split(/[؛\.\|\-,]\s|؛/).map(p => p.trim()).filter(p => p.length > 0);
+        if (pts.length > 1) {
+            const fields = ['author', 'author_preview', 'title', 'collab', 'translator', 'place', 'publisher', 'year', 'pages'];
+            pts.forEach((v, i) => { if(fields[i]) document.getElementById(fields[i]).value = v; });
+            el.value = ""; 
+            document.getElementById('subject').focus();
+        }
+    }
 }
 
 function edit(i) {
@@ -155,7 +158,7 @@ function deleteRec(i) { if(confirm("حذف السجل؟")) { recs.splice(i, 1); 
 
 function openBiblioWindow() {
     const win = window.open('', '_blank');
-    let content = `<html dir="rtl"><head><title>القائمة الببليوغرافية</title><style>body { font-family: 'Times New Roman', serif; padding: 40px; line-height: 1.6; font-size: 13pt; } .preview-subject { background: #d1d1d1; text-align: center; font-weight: bold; padding: 5px; margin: 20px 0 10px 0; font-size: 15pt; border: 1px solid #999; } .entry-container { margin-bottom: 15px; border-bottom: 1px dashed #ccc; padding-bottom: 8px; }</style></head><body><h1 style="text-align:center">القائمة الببليوغرافية</h1>`;
+    let content = `<html dir="rtl"><head><title>القائمة الببليوغرافية</title><style>body { font-family: 'Times New Roman', serif; padding: 40px; line-height: 1.6; font-size: 13pt; font-weight: bold; color: black; } .preview-subject { background: #d1d1d1; text-align: center; font-weight: bold; padding: 5px; margin: 20px 0 10px 0; font-size: 15pt; border: 1px solid #999; } .entry-container { margin-bottom: 15px; border-bottom: 1px dashed #ccc; padding-bottom: 8px; }</style></head><body><h1 style="text-align:center">القائمة الببليوغرافية</h1>`;
     let lastSub = '';
     recs.forEach((r) => {
         if (r.subject !== lastSub) { content += `<div class="preview-subject">${r.subject}</div>`; lastSub = r.subject; }
@@ -171,6 +174,14 @@ function openBiblioWindow() {
     win.document.write(content + '</body></html>'); win.document.close();
 }
 
+function journalIdx() {
+    let map = {};
+    recs.forEach(r => { if(r.journal && r.finalID) { let key = r.journal + (r.affiliation ? ` (${r.affiliation})` : ""); if(!map[key]) map[key] = []; map[key].push(r.finalID); } });
+    let h = `<h3>قائمة المجلات (والتبعية)</h3><ul>`;
+    Object.keys(map).sort((a,b)=>cleanAL(a).localeCompare(cleanAL(b),'ar')).forEach(k => { h += `<li><b>${k}</b> - (${map[k].join(', ')})</li>`; });
+    document.getElementById('modalBody').innerHTML = h + '</ul>'; document.getElementById('modalOverlay').style.display='block';
+}
+
 function importX(e) {
     let f = e.target.files[0]; let rd = new FileReader();
     rd.onload = function(e) {
@@ -182,7 +193,7 @@ function importX(e) {
 function exportX() { const ws = XLSX.utils.json_to_sheet(recs); const wb = XLSX.utils.book_new(); XLSX.utils.book_append_sheet(wb, ws, "Data"); XLSX.writeFile(wb, `Fahras_${curP}.xlsx`); }
 function idx(f, t) {
     let map = {}; recs.forEach(r => { if(r[f] && r.finalID) r[f].split('/').forEach(p => { p=p.trim(); if(!map[p]) map[p]=[]; map[p].push(r.finalID); })});
-    let h = `<h3>كشاف ${t}</h3><ul>`; Object.keys(map).sort((a,b)=>cleanAL(a).localeCompare(cleanAL(b),'ar')).forEach(k => { h += `<li>${k} (${map[k].join(', ')})</li>`; });
+    let h = `<h3>كشاف ${t}</h3><ul>`; Object.keys(map).sort((a,b)=>cleanAL(a).localeCompare(cleanAL(b),'ar')).forEach(k => { h += `<li><b>${k}</b> (${map[k].join(', ')})</li>`; });
     document.getElementById('modalBody').innerHTML = h + '</ul>'; document.getElementById('modalOverlay').style.display='block';
 }
 function closeM() { document.getElementById('modalOverlay').style.display='none'; }
